fix aos offset bug

--- a/week4/index.html
+++ b/week4/index.html
@@ -165,9 +165,9 @@
       <div class="footerContact">
         <img data-aos="fade-up" src="./img/logotype-lg-dark.svg" class="footerLogo">
         <ul class="footerContactInfo">
-          <li data-aos="fade-up">07-1234-5678</li>
-          <li data-aos="fade-up">sweetaste@email.com</li>
-          <li data-aos="fade-up">800 高雄市新興區幸福路 520 號</li>
+          <li data-aos="fade-up" data-aos-offset="50">07-1234-5678</li>
+          <li data-aos="fade-up" data-aos-offset="50">sweetaste@email.com</li>
+          <li data-aos="fade-up" data-aos-offset="50">800 高雄市新興區幸福路 520 號</li>
         </ul>
       </div>
       <div data-aos="fade-up" class="slogan">
