--- a/week7/index.html
+++ b/week7/index.html
@@ -1,14 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>d’Perfume</title>
+    <meta name='description' content='perfume web' />
     <link rel="stylesheet" href="./stylesheets/css/all.css">
 </head>
+
 <body>
+    <div class="header">
+        <div class="container">
+            <nav class="navbar navbar-expand-md navbar-light p-0">
+                <h1 class="navbar-brand">
+                    <a href="index.html" class="logo logoHeader">d’Perfume</a>
+                </h1>
+                <div class="d-flex align-items-center justify-content-around">
+                    <div class="mobileCart d-md-none position-relative mr-3">
+                        <a href="#" class="btn border-none"><img src="./img/index/shopping-cart.svg" alt="Cart" class="d-block"></a>
+                        <p class="text-white text-center bg-primaryDark">3</p>
+                    </div>
+                    <button class="navbar-toggler collapsed btn" type="button" data-toggle="collapse"
+                        data-target="#navMenu" aria-controls="navMenu" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="navbar-collapse collapse justify-content-end">
+                    <ul class="navbar-nav align-items-center">
+                        <li class="nav-item d-none d-md-block">
+                            <a class="nav-link d-flex" href="products.html"><img src="./img/index/tshirt.svg"
+                                    alt="Product" class="mr-1 d-block">Product</a>
+                        </li>
+                        <li class="nav-item d-none d-md-block">
+                            <a class="nav-link d-flex" href="login.html"><img src="./img/index/user-alt.svg" alt="Login"
+                                    class="mr-1 d-block">log in</a>
+                        </li>
+                        <li class="nav-item d-none d-md-block">
+                            <a class="nav-link d-flex" href="#"><img src="./img/index/heart.svg" alt="Wishlist"
+                                    class="mr-1 d-block">Wishlist</a>
+                        </li>
+                        <li class="nav-item d-none d-md-block">
+                            <a class="nav-link d-flex" href="#"><img src="./img/index/shopping-cart.svg" alt="Cart"
+                                    class="mr-1 d-block">Cart(3)</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <div class="navbar-collapse collapse justify-content-end" id="navMenu">
+            <ul class="navbar-nav text-center">
+                <li class="nav-item py-4 d-md-none bg-navDark border-bottom border-white">
+                    <a class="nav-link text-white" href="products.html">Product</a>
+                </li>
+                <li class="nav-item py-4 d-md-none bg-navDark border-bottom border-white">
+                    <a class="nav-link text-white" href="#">Wishlist</a>
+                </li>
+                <li class="nav-item py-4 d-md-none bg-navDark border-bottom border-white">
+                    <a class="nav-link text-white" href="#">Blog</a>
+                </li>
+                <li class="nav-item py-4 d-md-none bg-navDark border-bottom border-white">
+                    <a class="nav-link text-white" href="#">Contact</a>
+                </li>
+                <li class="nav-item py-4 d-md-none bg-navDark">
+                    <a class="nav-link text-white" href="login.html">Log in</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- 客製化區塊 Start -->
+    <div class="banner d-flex">
+        <div class="container d-flex">
+            <div class="row text-white align-items-center">
+                <div class="offset-md-7 col-md-5">
+                    <h2 class="h1">Prefume your day</h2>
+                    <h4 class="mb-4 font-weight-normal">A perfume is like a piece of clothing, a message, a way of
+                        presenting
+                        oneself a
+                        costume that according to the person who
+                        wears it.
+                    </h4>
+                    <a class="btn btn-outline-white text-white rounded-pill py-3 px-100" href="products.html" role="button">Shop now</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-40 mt-md-60">
+        <div class="row no-gutters align-items-center flex-row-reverse">
+            <img class="col-12 col-md-6 col-lg-6 img-fluid" src="./img/index/product1.png" alt="">
+            <div class="col-12 col-md-6 pt-2 pb-7 py-md-0 px-md-40">
+                <div>
+                    <h2>Gabrielle CHANEL</h2>
+                    <h5 class="mb-3 font-weight-normal">全新嗅覺體驗，花香四溢、明亮馥郁。結合茉莉、依蘭依蘭、橙花和最迷人的格拉斯晚香玉之花香，呈現出夢幻花香氣息。
+                        極具女性特質的香奈兒嘉柏麗香水，專為光芒四射的她而生。</h5>
+                    <a href="#" class="text-primary mt-2 mt-md-4">查看更多</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="row no-gutters align-items-center">
+            <img class="col-12 col-md-6 img-fluid" src="./img/index/product2.png" alt="">
+            <div class="col-12 col-md-6 pt-2 pb-7 py-md-0 px-md-40">
+                <h2>Five O’clock Au Gingembre</h2>
+                <h5 class="mb-3 font-weight-normal">
+                    生薑與溫醇的肉桂香、紅糖的香甜摻和成一氣，溫暖微辛的氣息反倒形成一股輕煙氤氳開來，還帶點微微煙醺感漫溢在整個鼻息之間，細聞之下,又還有溫溫淡淡的木香，溫和而暖心。</h5>
+                <a href="#" class="text-primary mt-2 mt-md-4">查看更多</a>
+            </div>
+        </div>
+
+        <div class="row no-gutters align-items-center flex-row-reverse">
+            <img class="col-12 col-md-6 img-fluid" src="./img/index/product3.png" alt="">
+            <div class="col-12 col-md-6 pt-2 pb-7 py-md-0 px-md-40">
+                <h2>CHANEL N°5</h2>
+                <h5 class="mb-3 font-weight-normal">N°5，女性魅力的極致精髓。散發柔美澄透的乙醛花束香氣。經典傳奇香氛，蘊藏於極簡設計的獨特瓶身。</h5>
+                <a href="productInfo.html" class="text-primary">查看更多</a>
+            </div>
+        </div>
+
+        <div class="row no-gutters align-items-center">
+            <div class="col-12 col-md-6 ">
+                <img class="h-100 img-fluid" src="./img/index/product4.png" alt="">
+            </div>
+            <div class="col-12 col-md-6 pt-2 pb-7 py-md-0 px-md-40">
+                <h4>1. <br> Levels of Preventive Maintenance Compliance</h4>
+                <h6 class="mb-5 mb-md-9 font-weight-normal">The core idea of preventative maintenance is the performance
+                    of proactive actions
+                    against unscheduled downtime in order to identify potential defects before they evolve into
+                    something more severe.</h6>
+                <h4>2. <br> Percentage of Planned Maintenance</h4>
+                <h6 class="mb-5 mb-md-9 font-weight-normal">The planned maintenance percentage is the total planned
+                    maintenance time in your CMMS
+                    software over a date range over the total number of hours of a service performed by the technicians.
+                </h6>
+                <h4>3. <br> Critical percentage of planned maintenance</h4>
+                <h6 class="mb-5 mb-md-60 font-weight-normal">Calculating the critical percentage of planned maintenance
+                    will help you prioritize the
+                    most important operations that should be performed immediately.</h6>
+                <button class="btn btn-outline-secondary rounded-pill py-3 px-60">Plan a free online training</button>
+            </div>
+        </div>
+    </div>
+    <div class="bg-light mt-40 mt-md-60 py-40 py-md-7">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-4 bg-light card">
+                    <img src="./img/index/product5.png" class="card-img-top img-fluid">
+                    <div class="card-body mt-2">
+                        <h4 class="card-title mb-0">Poppy & Barley</h4>
+                        <h6 class="card-text font-weight-normal">Jo Malone</h6>
+                        <h6 class="card-text font-weight-normal mt-4">NT$1,380 <del class="text-muted">NT$1,580</del>
+                        </h6>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 bg-light card mt-7 mt-md-0">
+                    <img src="./img/index/product6.png" class="card-img-top img-fluid">
+                    <div class="card-body mt-2">
+                        <h4 class="card-title mb-0">Body Wash</h4>
+                        <h6 class="card-text font-weight-normal">Curology</h6>
+                        <h6 class="card-text font-weight-normal mt-4">NT$1,580</h6>
+                    </div>
+                </div>
+                <div class="soldOut col-12 col-md-4 bg-light card mt-7 mt-md-0">
+                    <img src="./img/index/product7.png" class="card-img-top img-fluid">
+                    <div class="card-body mt-2">
+                        <h4 class="card-title mb-0">Apple Cider Vinegar Capsule</h4>
+                        <h6 class="card-text font-weight-normal">Tonik</h6>
+                        <h6 class="card-text font-weight-normal mt-4">NT$1,580</h6>
+                        <p class="card-text h4 text-white">Sold Out</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-40 mt-md-60">
+        <div class="row align-items-center">
+            <img class="col-12 col-lg-8 img-fluid" src="./img/index/product8.png" alt="">
+            <div class="col-12 col-lg-4 mt-2 mt-lg-0">
+                <h2 class="mb-0">Bottle-Recycling</h2>
+                <h5 class="font-weight-normal">Recycle your used empty bottles and be rewarded!</h5>
+                <h6 class="font-weight-normal mt-2 mt-lg-4">For the past 10 years, we have collected over 800,000 bottles through Empty Bottle Recycling Campaign and planted more
+                than 860 pine trees for a better environment.For the past 10 years, we have collected over 800,000 bottles through Empty
+                Bottle Recycling Campaign and planted more than 860 pine trees for a better environment.</h6>
+                <a href="#" class="text-primary mt-2 mt-lg-4">查看更多</a>
+            </div>
+        </div>
+    </div>
+    <!-- 客製化區塊 End -->
+
+    <div class="footerbanner d-flex mt-40 mt-md-60">
+        <div class="container d-flex">
+            <div class="row align-items-center">
+                <div class="col-12">
+                    <h2 class="font-weight-bold text-dark">記得<br>訂閱以獲取更多資訊！</h2>
+                    <div class="input-group input-group-lg mt-5">
+                        <input type="text" class="form-control" placeholder="Your email address" aria-label="emailAddress"
+                            aria-describedby="button-addon">
+                        <div class="input-group-append">
+                            <button class="btn btn-primaryDark" type="button" id="button-addon">Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer bg-primaryDark">
+        <div class="container py-3 d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center justify-content-between">
+                <h1>
+                    <a href="index.html" class="logo logoFooter">d’Perfume</a>
+                </h1>
+                <small class="text-white ml-5 d-none d-md-block">© 2020. All Rights Reserved.</small>
+            </div>
+            <small class="text-white ml-5 d-block d-md-none">© 2020. All Rights Reserved.</small>
+            <ul class="list-unstyled d-none d-md-flex mb-0">
+                <li><a href="products.html" class="text-white p-5">Product</a></li>
+                <li><a href="#" class="text-white p-5">Blog</a></li>
+                <li><a href="#" class="text-white p-5">Contact</a></li>
+            </ul>
+        </div>
+    </div>
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/popper-1.16.1.min.js"></script>
     <script src="./js/bootstrap-4.5.2.js"></script>
 </body>
+
 </html>
