--- a/week7/login.html
+++ b/week7/login.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>d’Perfume</title>
     <meta name='description' content='perfume web' />
+
+    <meta property="og:locale" content="zh_TW" />
+    <meta property="og:title" content="d’Perfume" />
+    <meta property="og:description" content="perfume web">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yuakatl.github.io/HexSchool-Frontend-Class/week7/index.html" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/YuakaTL/HexSchool-Frontend-Class/master/week7/img/index/banner.png" />
+    
     <link rel="stylesheet" href="./stylesheets/css/all.css">
 </head>
 
