adjust typeface & footer display

--- a/week7/index.html
+++ b/week7/index.html
@@ -103,7 +103,7 @@
                     <h2>Gabrielle CHANEL</h2>
                     <h5 class="mb-3 font-weight-normal">全新嗅覺體驗，花香四溢、明亮馥郁。結合茉莉、依蘭依蘭、橙花和最迷人的格拉斯晚香玉之花香，呈現出夢幻花香氣息。
                         極具女性特質的香奈兒嘉柏麗香水，專為光芒四射的她而生。</h5>
-                    <a href="#" class="text-primary mt-2 mt-md-4">查看更多</a>
+                    <a href="#" class="text-primary font-weight-bold mt-2 mt-md-4">查看更多</a>
                 </div>
             </div>
         </div>
@@ -114,7 +114,7 @@
                 <h2>Five O’clock Au Gingembre</h2>
                 <h5 class="mb-3 font-weight-normal">
                     生薑與溫醇的肉桂香、紅糖的香甜摻和成一氣，溫暖微辛的氣息反倒形成一股輕煙氤氳開來，還帶點微微煙醺感漫溢在整個鼻息之間，細聞之下,又還有溫溫淡淡的木香，溫和而暖心。</h5>
-                <a href="#" class="text-primary mt-2 mt-md-4">查看更多</a>
+                <a href="#" class="text-primary font-weight-bold mt-2 mt-md-4">查看更多</a>
             </div>
         </div>
 
@@ -123,7 +123,7 @@
             <div class="col-12 col-md-6 pt-2 pb-7 py-md-0 px-md-40">
                 <h2>CHANEL N°5</h2>
                 <h5 class="mb-3 font-weight-normal">N°5，女性魅力的極致精髓。散發柔美澄透的乙醛花束香氣。經典傳奇香氛，蘊藏於極簡設計的獨特瓶身。</h5>
-                <a href="productInfo.html" class="text-primary">查看更多</a>
+                <a href="productInfo.html" class="text-primary font-weight-bold">查看更多</a>
             </div>
         </div>
 
@@ -146,7 +146,7 @@
                 <h6 class="mb-5 mb-md-60 font-weight-normal">Calculating the critical percentage of planned maintenance
                     will help you prioritize the
                     most important operations that should be performed immediately.</h6>
-                <button class="btn btn-outline-secondary rounded-pill py-3 px-60">Plan a free online training</button>
+                <button class="btn btn-outline-secondary font-weight-bold rounded-pill py-3 px-60">Plan a free online training</button>
             </div>
         </div>
     </div>
@@ -191,7 +191,7 @@
                 <h6 class="font-weight-normal mt-2 mt-lg-4">For the past 10 years, we have collected over 800,000 bottles through Empty Bottle Recycling Campaign and planted more
                 than 860 pine trees for a better environment.For the past 10 years, we have collected over 800,000 bottles through Empty
                 Bottle Recycling Campaign and planted more than 860 pine trees for a better environment.</h6>
-                <a href="#" class="text-primary mt-2 mt-lg-4">查看更多</a>
+                <a href="#" class="text-primary font-weight-bold mt-2 mt-lg-4">查看更多</a>
             </div>
         </div>
     </div>
@@ -214,14 +214,14 @@
         </div>
     </div>
     <div class="footer bg-primaryDark">
-        <div class="container py-3 d-flex justify-content-between align-items-center">
+        <div class="container py-3 d-flex flex-column flex-sm-row align-items-start align-items-sm-center justify-content-sm-between">
             <div class="d-flex align-items-center justify-content-between">
                 <h1>
                     <a href="index.html" class="logo logoFooter">d’Perfume</a>
                 </h1>
                 <small class="text-white ml-5 d-none d-md-block">© 2020. All Rights Reserved.</small>
             </div>
-            <small class="text-white ml-5 d-block d-md-none">© 2020. All Rights Reserved.</small>
+            <small class="text-white d-block d-md-none">© 2020. All Rights Reserved.</small>
             <ul class="list-unstyled d-none d-md-flex mb-0">
                 <li><a href="products.html" class="text-white p-5">Product</a></li>
                 <li><a href="#" class="text-white p-5">Blog</a></li>
