--- a/week7/productInfo.html
+++ b/week7/productInfo.html
@@ -170,14 +170,14 @@
     <!-- 客製化區塊 End -->
     
     <div class="footer bg-primaryDark">
-        <div class="container py-3 d-flex justify-content-between align-items-center">
+        <div class="container py-3 d-flex flex-column flex-sm-row align-items-start align-items-sm-center justify-content-sm-between">
             <div class="d-flex align-items-center justify-content-between">
                 <h1>
                     <a href="index.html" class="logo logoFooter">d’Perfume</a>
                 </h1>
                 <small class="text-white ml-5 d-none d-md-block">© 2020. All Rights Reserved.</small>
             </div>
-            <small class="text-white ml-5 d-block d-md-none">© 2020. All Rights Reserved.</small>
+            <small class="text-white d-block d-md-none">© 2020. All Rights Reserved.</small>
             <ul class="list-unstyled d-none d-md-flex mb-0">
                 <li><a href="products.html" class="text-white p-5">Product</a></li>
                 <li><a href="#" class="text-white p-5">Blog</a></li>
