--- a/jQuery course final/index.html
+++ b/jQuery course final/index.html
@@ -25,15 +25,15 @@
 <body>
     <a href="#" class="goTop"><i class="fas fa-arrow-circle-up fa-3x"></i></a>
     <nav class="socialMedia">
-        <ul class="container">
+        <ul class="container d-flex">
             <li><a href="#" class="fb"><img src="./img/facebookIcon.png" alt="facebookIcon">粉絲團</a></li>
             <li><a href="#" class="twitter"><img src="./img/twitterIcon.png" alt="twitterIcon">聯絡我們</a></li>
         </ul>
     </nav>
     <div class="container">
-        <header class="header">
+        <header class="header d-flex">
             <h1><a href="#" class="headerLogo">HexSchool</a></h1>
-            <ul class="menu">
+            <ul class="menu d-flex">
                 <li>
                     <a href="#">首頁</a>
                 </li>
@@ -86,7 +86,7 @@
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
         </div>
-        <ul class="course">
+        <ul class="course d-flex">
             <li class="courseItem">
                 <a href="./img/html.png" data-lightbox="image" data-title="HTML">
                     <img class="courseImg" src="./img/html.png" alt="HTMLPhoto">
@@ -115,7 +115,7 @@
                 </ol>
             </li>
         </ul>
-        <div class="compare">
+        <div class="compare d-flex">
             <h2>線上及實體課程差異</h2>
             <table>
                 <tr>
@@ -164,9 +164,9 @@
         </div>
         <div class="bgGreen">
             <h2>對我們課程有興趣嗎？<br> 歡迎留下您的資料</h2>
-            <form action="#" class="contact">
+            <form action="#" class="contact d-flex">
                 <textarea name="message" id="message" class="contactMessage" placeholder="請輸入訊息"></textarea>
-                <div class="contactInfo">
+                <div class="contactInfo d-flex">
                     <label for="name">姓名</label>
                     <input type="text" id="name" name="name" placeholder="請輸入姓名" value="">
                     <label for="phone">電話</label>
@@ -177,7 +177,7 @@
                 </div>
             </form>
         </div>
-        <footer class="footer">
+        <footer class="footer d-flex">
             <a href="#" class="footerLogo">
                 <img src="./img/footerLogo.png" alt="footerLogo">
             </a>
