--- a/jQuery course final/index.html
+++ b/jQuery course final/index.html
@@ -168,11 +168,11 @@
                 <textarea name="message" id="message" class="contactMessage" placeholder="請輸入訊息"></textarea>
                 <div class="contactInfo d-flex">
                     <label for="name">姓名</label>
-                    <input type="text" id="name" name="name" placeholder="請輸入姓名" value="">
+                    <input type="text" id="name" name="name" placeholder="請輸入姓名" value="" required>
                     <label for="phone">電話</label>
-                    <input type="text" id="phone" name="phone" placeholder="請輸入電話" value="">
+                    <input type="tel" id="phone" name="phone" placeholder="請輸入手機電話" value="" pattern="[0-9]{10}" required>
                     <label for="email">信箱</label>
-                    <input type="text" id="email" name="email" placeholder="請輸入信箱" value="">
+                    <input type="email" id="email" name="email" placeholder="請輸入信箱" value="" required>
                     <button type="submit" name="button" class="btn">送出</button>
                 </div>
             </form>
